ref: remove unused code

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -6,4 +6,4 @@ plugins:
     path: ./protoc-gen-fetch-types
     out: ./examples/gen
     opt: 
-      - import_ignore=["google" "test"]
+      - import_ignore=["google"]
